kill max width to fix clipping issue

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1099,7 +1099,6 @@
 }
 
 .lh-category-header .lh-score__gauge {
-  max-width: 400px;
   width: auto;
   margin: 0px auto;
 }
